Fix nav on mobile

--- a/css/wurst.css
+++ b/css/wurst.css
@@ -40,3 +40,10 @@ canvas {
     left: 0;
     z-index: -1;
 }
+
+@media screen and (max-width: 992px) {
+    #nav-side {
+        position: relative;
+        text-align: center;
+    }
+}
